# classifier_practice

./: pyproject.toml
py/: main.py
