[tool.poetry]
name = "classifier_practice"
version = "0.1.0"
description = "A project for scraping the word of the day"
authors = ["Thomas Delaney <thomas.delaney@posteo.net>"]
license = "GNU Licence, I suppose"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
black = "*"
isort = "*"
autoflake = "*"
scikit-learn = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
seaborn = "*"
imblearn = "*"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
